[package]
name = "kythera-actors"
description = "Kythera FVM WASM actor builder"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Polyphene"]
homepage="https://polyphene.github.io/kythera/"
documentation="https://polyphene.github.io/kythera/"
repository="https://github.com/polyphene/kythera"
readme="README.md"

[features]
default=[]
testing=[]
