[package]
name = "kythera"
version = "0.1.0-alpha.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Polyphene <contact@polyphene.io>"]
description = """Kythera is a Toolset for Filecoin Virtual Machine Native Actor development, testing and deployment.
For more information, check out the official documentation at https://polyphene.github.io/kythera/ ."""
documentation = "https://polyphene.github.io/kythera/"
repository = "https://github.com/polyphene/kythera"
keywords = ["kythera", "cli", "filecoin", "fvm", "wasm"]
categories = ["command-line-utilities"]

[[bin]]
name = "kythera"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
log = "0.4.17"
kythera-lib = { version = "0.1.0", path = "../lib" }
walkdir = "2.3.3"
wat = "1.0.61"

[dev-dependencies]
tempfile = "3.4.0"
