[package]
name = "kythera-cli"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Polyphene <contact@polyphene.io>"]
description = """Kythera is a Toolset for Filecoin Virtual Machine Native Actor development, testing and deployment.
For more information, check out the official documentation at https://polyphene.github.io/kythera/ ."""
documentation = "https://polyphene.github.io/kythera/"
repository = "https://github.com/polyphene/kythera"
keywords = ["kythera", "cli", "filecoin", "fvm", "wasm"]
categories = ["command-line-utilities"]
homepage="https://polyphene.github.io/kythera/"
readme="README.md"

[[bin]]
name = "kythera"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.1.11", features = ["derive"] }
colored = "2.0.0"
comfy-table = "6.1.4"
csv = "1.2.1"
env_logger = "0.10.0"
kythera-lib = { version = "0.2.0", path = "../lib", features = ["colors"] }
log = "0.4.17"
optional_struct = "0.3.1"
path-clean = "1.0.1"
serde = { version = "1.0.158", features = ["derive"] }
serde_yaml = "0.9.19"
thiserror = "1.0.40"
walkdir = "2.3.3"
wat = "1.0.61"

[dev-dependencies]
assert_cmd = "2.0.10"
assert_fs = "1.0.12"
predicates = "3.0.2"
tempfile = "3.4.0"
wat = "1.0.61"
kythera-actors = { path = "../actors", features = ["testing"] }
