[package]
name = "kythera-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
blake2b_simd = { version = "1.0.0" }
frc42_dispatch = "3.1.0"
fvm_ipld_encoding = { version = "0.3.3" }
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = { version = "0.5.0" }
thiserror = "1.0.40"