[package]
name = "kythera-fvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
cid = { version = "0.8.5", default-features = false }
fvm = { git = "https://github.com/filecoin-project/ref-fvm.git", version = "3.1.0", default-features = false, features = ["testing"] }
fvm_ipld_blockstore = { git = "https://github.com/filecoin-project/ref-fvm.git", version = "0.1.1" }
fvm_ipld_encoding = { git = "https://github.com/filecoin-project/ref-fvm.git", version = "0.3.3" }
fvm_shared = { git = "https://github.com/filecoin-project/ref-fvm.git", version = "3.1.0" }
multihash = { version = "0.16.1", default-features = false }
