[package]
name = "kythera-fvm"
version = "0.2.0"
edition = "2021"
description="Core implementation of the Kythera FVM"
homepage="https://polyphene.github.io/kythera/"
documentation="https://polyphene.github.io/kythera/"
repository="https://github.com/polyphene/kythera"
license="MIT OR Apache-2.0"
readme="README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
cid = { version = "0.8.5", default-features = false }
fvm = { version = "3.1.0", default-features = false, features = ["testing"] }
fvm_ipld_blockstore = "0.2.0"
fvm_ipld_encoding = { version = "0.3.3" }
fvm_shared = { version = "3.1.0" }
multihash = { version = "0.16.1", default-features = false }

kythera-common = { path = "../common", version = "0.1.0" }
log = "0.4.17"
