[package]
name = "kythera-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actors-v10 = { package = "fil_builtin_actors_bundle", git = "https://github.com/filecoin-project/builtin-actors", rev = "39571e2" }
fil_actor_account = { git = "https://github.com/filecoin-project/builtin-actors", rev = "39571e2", features = [] }
fil_actor_cron = { git = "https://github.com/filecoin-project/builtin-actors", rev = "39571e2", features = [] }
fil_actor_datacap = { git = "https://github.com/filecoin-project/builtin-actors", rev = "39571e2", features = [] }
fil_actor_init = { git = "https://github.com/filecoin-project/builtin-actors", rev = "39571e2", features = [] }
fil_actor_market = { git = "https://github.com/filecoin-project/builtin-actors", rev = "39571e2", features = [] }
fil_actor_miner = { git = "https://github.com/filecoin-project/builtin-actors", rev = "39571e2", features = [] }
fil_actor_multisig = { git = "https://github.com/filecoin-project/builtin-actors", rev = "39571e2", features = [] }
fil_actor_paych = { git = "https://github.com/filecoin-project/builtin-actors", rev = "39571e2", features = [] }
fil_actor_power = { git = "https://github.com/filecoin-project/builtin-actors", rev = "39571e2", features = [] }
fil_actor_reward = { git = "https://github.com/filecoin-project/builtin-actors", rev = "39571e2", features = [] }
fil_actor_system = { git = "https://github.com/filecoin-project/builtin-actors", rev = "39571e2", features = [] }
fil_actor_verifreg = { git = "https://github.com/filecoin-project/builtin-actors", rev = "39571e2", features = [] }
fil_actors_runtime = { git = "https://github.com/filecoin-project/builtin-actors", rev = "39571e2", features = [] }

fvm_ipld_blockstore = { version = "0.1.1" }
fvm_ipld_car = { version = "0.6.0" }
fvm_ipld_encoding = { version = "0.3.3" }
fvm_shared = { version = "3.1.0", features = ["testing"] }

kythera-fvm = { path = "../fvm" }
kythera-common = { path = "../common" }

cid = { version = "0.8.5", default-features = false }
futures = { version = "0.3.26", default-features = false, features = ["executor"] }
libsecp256k1 = "0.7.1"
log = "0.4.17"
rand = "0.8.5"
rand_chacha = "0.3.1"
thiserror = "1.0.39"

[dev-dependencies]
wat = "1.0.51"
kythera_test_actors = { path = "../test_actors" }