[package]
name = "builtins-test-actor"
version = "0.1.0"
edition = "2021"
publish=false

[target.'cfg(target_arch = "wasm32")'.dependencies]
fil_actors_runtime_v10 = "1.0.0"
frc42_dispatch = "3.1.0"
fvm_sdk = {  version = "3.0.0" }
fvm_shared = {  version = "3.1.0" }
fvm_ipld_encoding = {  version = "0.3.3" }
serde = { version = "1.0.165", features = ["derive"] }

[lib]
crate-type = ["cdylib"]