[package]
name = "basic_test_actor"
version = "0.1.0"
edition = "2021"

[dependencies]
frc42_dispatch = "2.0.0"

fvm_ipld_encoding = "0.3.3"
fvm_sdk = "3.0.0"
fvm_shared = "~3.0"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = { version = "1.0.31" }

[build-dependencies]
substrate-wasm-builder = "9.0.0"
